# kraki

./: README.md
kraki/: Cargo.toml
kraki/src/: cache.rs  client.rs  lib.rs  pair.rs  pairs.rs  symbol.rs  symbols.rs
kraki/src/parse/: ack.rs  constants.rs  kraken_req.rs  mod.rs  req.rs  snapshot_update.rs
kraki/src/parse/market_data/: book.rs  candles.rs  instruments.rs  mod.rs  orders.rs  ticker.rs  trades.rs
kraki/src/web_socket/: connection.rs
